<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="todo"> Image </string>
    <string name="next">next</string>
    <string name="complete_your_information">Complete Your Information</string>
    <string name="onClick">btn_next</string>
    <string name="complete_your_informatiom">Complete Your Informatiom</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="save_data">Save Data</string>
    <string name="btn_save">btn_save</string>
    <string name="length">Length</string>
    <string name="weight">weight</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="logout">Logout</string>
    <string name="addrecord">AddRecord</string>
    <string name="addfood">AddFood</string>
    <string name="textview">TextView</string>
    <string name="old_status">Old Status</string>
    <string name="current_status">Current Status</string>
    <string name="viewfood">ViewFood</string>
    <string name="save">Save</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="category">Category</string>
    <string name="photo">Photo</string>
    <string name="calory">Calory</string>
    <string name="add_food_details">Add Food Details</string>
    <string name="name2">Name</string>
    <string name="save1">Save</string>
    <string name="upload_photo1">Upload Photo</string>
    <string name="category1">Category</string>
    <string name="photo1">Photo</string>
    <string name="name">Name</string>
    <string name="edit_food_details">Edit Food Details</string>
    <string name="calory2">Calory</string>
    <string name="create">CREATE</string>
    <string name="creat_new_account1">Creat New Account</string>
    <string name="re_password">Re-password</string>
    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="name1">name!</string>
    <string name="you_have_an_account">you Have An Account?</string>
    <string name="login">LogIn</string>
    <string name="if_you_do_not_already_have_an_account">If you do not already have an account</string>
    <string name="Todo">TODO</string>

</resources>