<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <TextView
        android:id="@+id/add"
        android:layout_width="317dp"
        android:layout_height="85dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:text="@string/add_food_details"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="180dp"
        android:text="@string/name"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calory"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="304dp"
        android:text="@string/calory"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/photo"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="360dp"
        android:text="@string/photo"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="236dp"
        android:text="@string/category"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uplode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="612dp"
        android:text="@string/upload_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="612dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="254dp"
        android:layout_height="187dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="408dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/food"
        android:contentDescription="@string/Todo"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>