<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/complete"
        android:layout_width="301dp"
        android:layout_height="96dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="96dp"
        android:text="@string/complete_your_informatiom"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="480dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="73dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="272dp"
        android:text="@string/gender"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="77dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="340dp"
        android:text="@string/weight"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/length"
        android:layout_width="77dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="408dp"
        android:text="@string/length"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weight1"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="344dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/length1"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="408dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date1"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="480dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save2"
        android:layout_width="251dp"
        android:layout_height="54dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="568dp"
        android:text="@string/save_data"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="btn_save"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/kg"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="352dp"
        android:text="@string/kg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cm"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="416dp"
        android:text="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="256dp"
        android:gravity="center_horizontal"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>