<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity9">

    <TextView
        android:id="@+id/text55"
        android:layout_width="238dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="604dp"
        android:text="@string/you_have_an_account"
        android:textColor="#090000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="232dp"
        android:text="@string/name1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="360dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password2"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="432dp"
        android:text="@string/re_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="296dp"
        android:text="@string/e_mail"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="152dp"
        android:text="@string/if_you_do_not_already_have_an_account"
        android:textColor="#888787"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newAccount"
        android:layout_width="381dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="Creat New Account"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/creat1"
        android:layout_width="272dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="504dp"
        android:text="@string/create"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="596dp"
        android:onClick="Button3"
        android:text="logIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>